--- a/main/css/color.css
+++ b/main/css/color.css
@@ -1,7 +1,7 @@
 /* nav */
 
 .nav-item:hover .nav-link {
-    color: #1e76bd!important;
+    color: #ec191e!important;
 }
 
 .nav-item:after {
@@ -11,10 +11,16 @@
     width: 100%;
     height: 2px;
     content: '';
-    background-color: #1e76bd;
+    background-color: #ec191e;
     opacity: 0;
     -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
+}
+
+.dropdown-item:hover,
+.dropdown-item:focus {
+    color: #ec191e;
+    background-color: transparent!important;
 }
 
 
@@ -33,14 +39,15 @@
     font-size: 14px;
     display: inline-block;
     text-decoration: none;
-    border-bottom: 1px solid #1e76bd;
+    border-bottom: 1px solid#1e76bd;
     padding: 5px;
     font-weight: 600;
     margin-top: 10px;
 }
 
 .btn-text:hover {
-    background-color: #1e76bd;
+    background-color: #ec191e;
+    border-bottom: 1px solid #ec191e;
     color: #fff;
     -webkit-box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
@@ -146,17 +153,30 @@
 /* footer */
 
 .footer-menu a:hover {
-    color: #1e76bd;
+    color: #ec191e;
 }
 
 .contact-widget p a:hover {
-    color: #1e76bd;
+    color: #ec191e;
 }
 
 .contact-widget p:hover {
-    color: #1e76bd;
+    color: #ec191e;
 }
 
 .text-footer:hover {
-    color: #1e76bd!important;
+    color: #ec191e!important;
+}
+
+.border-link::after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 2px;
+    background: #ec191e;
+    -webkit-transition: width .3s;
+    transition: width .3s;
+    -moz-transition: width .3s;
+    -ms-transition: width .3s;
+    -o-transition: width .3s;
 }
